# HotkeyForge

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README_CN.md  README_TW.md  pyproject.toml
src/hotkeyforge/: __init__.py  cli.py  constants.py  core.py
tests/: test_hotkeyforge.py
